add_executable(pinball WIN32
    control.cpp
    fullscrn.cpp
    gdrv.cpp
    high_score.cpp
    loader.cpp
    maths.cpp
    memory.cpp
    midi.cpp
    nudge.cpp
    objlist_class.cpp
    options.cpp
    partman.cpp
    pb.cpp
    pch.cpp
    pinball.cpp
    proj.cpp
    render.cpp
    score.cpp
    Sound.cpp
    splash.cpp
    TBall.cpp
    TBlocker.cpp
    TBumper.cpp
    TCircle.cpp
    TCollisionComponent.cpp
    TComponentGroup.cpp
    TDemo.cpp
    TDrain.cpp
    TEdgeBox.cpp
    TEdgeManager.cpp
    TEdgeSegment.cpp
    TFlagSpinner.cpp
    TFlipper.cpp
    TFlipperEdge.cpp
    TGate.cpp
    THole.cpp
    timer.cpp
    TKickback.cpp
    TKickout.cpp
    TLight.cpp
    TLightBargraph.cpp
    TLightGroup.cpp
    TLightRollover.cpp
    TLine.cpp
    TOneway.cpp
    TPinballComponent.cpp
    TPinballTable.cpp
    TPlunger.cpp
    TPopupTarget.cpp
    TRamp.cpp
    TRollover.cpp
    TSink.cpp
    TSoloTarget.cpp
    TSound.cpp
    TTableLayer.cpp
    TTextBox.cpp
    TTextBoxMessage.cpp
    TTimer.cpp
    TTripwire.cpp
    TWall.cpp
    WaveMix.cpp
    winmain.cpp
    zdrv.cpp
    control.h
    fullscrn.h
    gdrv.h
    high_score.h
    loader.h
    maths.h
    memory.h
    midi.h
    nudge.h
    objlist_class.h
    options.h
    partman.h
    pb.h
    pinball.h
    proj.h
    render.h
    resource.h
    score.h
    Sound.h
    splash.h
    TBall.h
    TBlocker.h
    TBumper.h
    TCircle.h
    TCollisionComponent.h
    TComponentGroup.h
    TDemo.h
    TDrain.h
    TEdgeBox.h
    TEdgeManager.h
    TEdgeSegment.h
    TFlagSpinner.h
    TFlipper.h
    TFlipperEdge.h
    TGate.h
    THole.h
    timer.h
    TKickback.h
    TKickout.h
    TLight.h
    TLightBargraph.h
    TLightGroup.h
    TLightRollover.h
    TLine.h
    TOneway.h
    TPinballComponent.h
    TPinballTable.h
    TPlunger.h
    TPopupTarget.h
    TRamp.h
    TRollover.h
    TSink.h
    TSoloTarget.h
    TSound.h
    TTableLayer.h
    TTextBox.h
    TTextBoxMessage.h
    TTimer.h
    TTripwire.h
    TWall.h
    TZmapList.h
    WaveMix.h
    winmain.h
    zdrv.h
    NatvisFile.natvis
    SpaceCadetPinball.rc
    PB_MSGFT.bin
    Icon_1.ico
    splash_bitmap.bmp
)
target_link_libraries(pinball PRIVATE comctl32 ddraw htmlhelp winmm)
target_precompile_headers(pinball PRIVATE pch.h)
target_compile_features(pinball PRIVATE cxx_std_17)
